--- a/portfolio.html
+++ b/portfolio.html
@@ -240,6 +240,19 @@
         </li>
       </ul>
     </div>
+    <div class="newsletter">
+      <h4 class="newsletter-txt">ZAPISZ SIĘ DO NEWSLETTERA</h4>
+      <form>
+        <label>
+        <input class="newsletter-input" type="email" name="email" placeholder="E-mail">
+        <button class="newsletter-btn" type="submit"><h4>Zapisz się</h4>
+          <svg class="send-icon">
+            <use href="./images/sprite.svg#icon-form-send"></use>
+          </svg>
+        </button>
+      </label>
+      </form>
+    </div>
       </div>
     </footer>
   </body>
